Added new package and started file cleanup

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+    <div class="cupcake-label">IP Address: <span id="ip-address"></span></div>
+    <div class="cupcake-label"></div>Last Restart: <span id="last-restart"></span></div>
+    <div class="cupcake-label"></div>Computer Name: <span id="computer-name"></span></div>
+    <div class="cupcake-label"></div>OS Version: <span id="os-version"></span></div>
   </body>
 </html>
