Improved styling and added copy icon

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
     <ul>
-      <li><div class="cupcake-label">Internal IP: <span id="ip-address"></span></div></li>
-      <li><div class="cupcake-label">Last Restart: <span id="last-restart"></span></div></li>
-      <li><div class="cupcake-label">System Name: <span id="computer-name"></span></div></li>
-      <li><div class="cupcake-label">OS Version: <span id="os-version"></span></div></li>
+      <li><div class="cupcake-label">Internal IP: <img src="copy.png" /><span id="ip-address"></span></div></li>
+      <li><div class="cupcake-label">Last Restart: <img src="copy.png" /><span id="last-restart"></span></div></li>
+      <li><div class="cupcake-label">Username: <img src="copy.png" /><span id="computer-name"></span></div></li>
+      <li><div class="cupcake-label">OS Version: <img src="copy.png" /><span id="os-version"></span></div></li>
     </ul>
   </body>
 </html>
