Added start of new copy function

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <ul>
-      <li><div class="cupcake-label">Internal IP: <img src="copy.png" /><span id="ip-address"></span></div></li>
+    <ul id="itemsList">
+      <li onclick="(e) => { console.log(e) }"><div class="cupcake-label">Internal IP: <img src="copy.png" /><span id="ip-address"></span></div></li>
       <li><div class="cupcake-label">Last Restart: <img src="copy.png" /><span id="last-restart"></span></div></li>
       <li><div class="cupcake-label">Username: <img src="copy.png" /><span id="computer-name"></span></div></li>
       <li><div class="cupcake-label">OS Version: <img src="copy.png" /><span id="os-version"></span></div></li>
