--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <ul id="itemsList">
+      <!-- <li><div class="cupcake-label">External IP: <img src="copy.png" /><span id="ip-address-external"></span></div></li> -->
       <li><div class="cupcake-label">Internal IP: <img src="copy.png" /><span id="ip-address"></span></div></li>
-      <li><div class="cupcake-label">Last Restart: <img src="copy.png" /><span id="last-restart"></span></div></li>
       <li><div class="cupcake-label">Username: <img src="copy.png" /><span id="computer-name"></span></div></li>
       <li><div class="cupcake-label">OS Version: <img src="copy.png" /><span id="os-version"></span></div></li>
+      <li><div class="cupcake-label">Last Restart: <img src="copy.png" /><span id="last-restart"></span></div></li>
     </ul>
   </body>
 </html>
